spacing bug on shopping cart fixed

--- a/components/ItemCartRow/itemCartRow.module.css
+++ b/components/ItemCartRow/itemCartRow.module.css
@@ -1,7 +1,7 @@
 .itemContainer {
   display: grid;
   justify-content: center;
-  grid-template-columns: 10em auto;
+  grid-template-columns: 9em 10em;
   grid-template-rows: 1fr;
 
   width: 100%;
@@ -15,7 +15,7 @@
 
 .itemImage > img {
   object-fit: contain;
-  object-position: left;
+  /* object-position: left; */
   filter: drop-shadow(2px 2px 1px #000);
   padding: 1em;
 }
@@ -76,14 +76,14 @@
   font-size: 0.85rem;
 }
 
-@media (min-width: 37.5em) {
+@media (min-width: 40em) {
   .itemContainer {
     justify-content: stretch !important;
-    grid-template-columns: 10em 1fr !important;
+    grid-template-columns: 9em 1fr !important;
   }
 
   .itemDetails {
-    grid-template-columns: 1fr 5.25rem 5.25rem 5.25rem;
+    grid-template-columns: 1fr 5rem 5rem 5rem;
     justify-items: center !important;
     align-items: baseline;
     padding-left: 0;
@@ -109,5 +109,17 @@
 
   .itemTotal {
     grid-column: 4 / 5;
+  }
+}
+
+
+@media (min-width: 45em) {
+  .itemContainer {
+    grid-template-columns: 10em 1fr !important;
+
+  }
+
+  .itemImage {
+    height: 10em;
   }
 }
