--- a/pages/store/shopping-cart/shoppingCart.module.css
+++ b/pages/store/shopping-cart/shoppingCart.module.css
@@ -30,7 +30,7 @@
   display: none;
   padding: 0.5rem 0rem;
 
-  grid-template-columns: 1fr auto 5.25rem 5.25rem 5.25rem;
+  grid-template-columns: 1fr auto 5rem 5rem 5rem;
 }
 
 .cartHeader ul > li:nth-child(1) {
@@ -39,6 +39,10 @@
 
 .cartHeader ul li {
   font-size: 0.9rem;
+}
+
+.cartHeader ul li:first-child {
+  padding-left: 0.5em;
 }
 
 .cartHeader > div {
@@ -73,18 +77,17 @@
   margin-top: 3em;
 }
 
-.emptyCart > div:nth-child(1) h4  {
-color: var(--black-secondary) !important;
-
+.emptyCart > div:nth-child(1) h4 {
+  color: var(--black-secondary) !important;
 }
 
 .emptyCart > div:nth-child(2) {
-  font-size: 0.85rem; 
+  font-size: 0.85rem;
   text-align: center;
   width: 14em;
   background-color: var(--orange-primary);
   border-radius: 5px;
-  padding: .5em 1em;
+  padding: 0.5em 1em;
   margin: 0 auto;
   margin-top: 1rem;
   cursor: pointer;
@@ -128,7 +131,7 @@ color: var(--black-secondary) !important;
   border-radius: 5px;
 }
 
-@media (min-width: 37.5em) {
+@media (min-width: 40em) {
   .cartHeader {
     border-bottom: 1px solid hsla(0, 0%, 45%, 0.5);
   }
@@ -147,40 +150,6 @@ color: var(--black-secondary) !important;
   .cartHeader ul li:nth-child(4) {
     justify-self: center;
   }
-
-  /* .cartItem {
-    justify-content: stretch !important;
-    grid-template-columns: 10em 1fr !important;
-  }
-
-  .itemDetails {
-    grid-template-columns: 1fr 5.25rem 5.25rem 5.25rem;
-    justify-items: center !important;
-    align-items: baseline;
-    padding-left: 0;
-    gap: 0;
-  }
-
-  .itemInfo {
-    grid-column: 1 / 2;
-    justify-self: start;
-  }
-
-  .itemQuantity {
-    grid-column: 2 / 3;
-    flex-direction: column;
-    align-items: center !important;
-
-    gap: 0.25em;
-  }
-
-  .itemPrice {
-    grid-column: 3 / 4;
-  }
-
-  .itemTotal {
-    grid-column: 4 / 5;
-  } */
 
   .cartFooter {
     justify-content: flex-end !important;
